# heyspace-discord

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 212c1335a5e3_course_thumbnail_image_channel.py  24af3a738daa_inital_setup.py  66bdccf72cde_added_course_setup.py  a1b2c3d4e5f6_added_course_runs.py  cd1a55624f34_emoji_vote.py  d614ffa7520e_added_thread_id.py  f492cdf201c6_drop_image_channel_id.py
src/: bot.py  config.py  main.py
src/cogs/: emoji_vote.py  general.py
src/cogs/courses/: __init__.py  service.py  views.py
src/cogs/courses/views/: __init__.py  edit_course.py  edit_hosts.py  edit_image.py  host_menu.py  info.py  mention.py  run_session.py  signup.py
src/db/: __init__.py  base.py
src/db/models/: __init__.py  course.py  emoji.py  guild.py
src/lib/: __init__.py  cog.py  embed.py
